--- a/app/elements/coder/challenge/tasks/general-code-task.html
+++ b/app/elements/coder/challenge/tasks/general-code-task.html
@@ -128,7 +128,7 @@
 			observers: [
 				'afterPropertiesSet(task)'
 			],
-			setFiles: function(e, detail) {
+			setFiles: function() {
 				var files = this.$.fileToRun.files;
 				if(files.length > 0){
 					this.$.codeEditor.setFile(files[0]);
