--- a/app/elements/coder/code-editor/consoles/test-stats-console.html
+++ b/app/elements/coder/code-editor/consoles/test-stats-console.html
@@ -74,7 +74,7 @@
 				if(result.Test){
 					this.appendTestStats(result);
 				}else{
-					this.stderr = result.Stdout
+					this.stderr = result.Stdout;
 					this.dataStyle = 'display: none';
 				}
 				if (result.Stderr) {
