--- a/app/elements/company/candidate/invite/invite-candidates.html
+++ b/app/elements/company/candidate/invite/invite-candidates.html
@@ -76,6 +76,7 @@
 				if (!this.$.form.validate()){
 					return;
 				}
+				console.log(this.candidates.length);
 				for (var i = 0; i < this.candidates.length; i++) {
 					this.$.userService.invite({
 						'email': this.candidates[i].email,
