--- a/app/elements/company/challenge/challenge-modal.html
+++ b/app/elements/company/challenge/challenge-modal.html
@@ -1,4 +1,4 @@
-<link rel="import" href="/elements/common/services/challenge-service.html">
+<link rel="import" href="/elements/common/services/challenge-template-service.html">
 <link rel="import" href="/elements/common/services/endpoint-service.html">
 <link rel="import" href="/bower_components/iron-form/iron-form.html">
 <link rel="import" href="/bower_components/paper-input/all-imports.html">
@@ -7,7 +7,7 @@
 <link rel="import" href="/bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
 <link rel="import" href="/bower_components/paper-menu/paper-menu.html">
 
-<dom-module id="challenge-modal">
+<dom-module id="challenge-template-modal">
 	<style>
 		:host {
 			width: 100%;
@@ -27,8 +27,8 @@
 		}
 	</style>
 	<template>
-		<challenge-service id="challengeService"></challenge-service>
-		<challenge-service id="endpointService" endpoints="{{endpoints}}"></challenge-service>
+		<challenge-template-service id="challengeTemplateService"></challenge-template-service>
+		<endpoint-service id="endpointService" endpoints="{{endpoints}}"></endpoint-service>
 
 		<paper-dialog id="dialog" modal>
 			<h2>These are the tasks you selected: </h2>
@@ -36,10 +36,10 @@
 				<div><span>{{_computeIndex(index)}}</span> <span>{{selectedTask.Assignment.Name}}</span></div>
 			</template>
 			<form is="iron-form" id="form">
-				<paper-input id="name" class="margined" label="Name" value="{{challengeToSave.name}}" required></paper-input>
-				<paper-input id="description" class="margined" label="Description" value="{{challengeToSave.description}}" required></paper-input>
-				<paper-input id="instructions" class="margined" label="Instructions" value="{{challengeToSave.instructions}}" required></paper-input>
-				<paper-input id="duration" class="margined" label="Duration(minutes)" value="{{challengeDuration}}" required pattern="^[1-9][0-9]*$" auto-validate></paper-input>
+				<paper-input id="name" class="margined" label="Name" value="{{challengeTemplateToSave.name}}" required></paper-input>
+				<paper-input id="description" class="margined" label="Description" value="{{challengeTemplateToSave.description}}" required></paper-input>
+				<paper-input id="instructions" class="margined" label="Instructions" value="{{challengeTemplateToSave.instructions}}" required></paper-input>
+				<paper-input id="duration" class="margined" label="Duration(minutes)" value="{{challengeTemplateDuration}}" required pattern="^[1-9][0-9]*$" auto-validate></paper-input>
 				<paper-dropdown-menu  class="self-center" id="endpoints" label="Endpoint" selected-item="{{selectedEndpoint}}" required>
 					<paper-menu class="dropdown-content">
 						<template is="dom-repeat" items="{{endpoints}}">
@@ -49,7 +49,7 @@
 				</paper-dropdown-menu>
 				<div class="buttonGroup">
 					<paper-button dialog-dismiss>Cancel</paper-button>
-					<paper-button class="primary" raised on-click="saveChallenge">Create
+					<paper-button class="primary" raised on-click="_saveChallengeTemplate">Create
 					</paper-button>
 				</div>
 			</form>
@@ -57,7 +57,7 @@
 	</template>
 	<script>
 		Polymer({
-			is: 'challenge-modal',
+			is: 'challenge-template-modal',
 			properties: {
 				selectedTasks: {
 					type: Array,
@@ -70,8 +70,8 @@
 				selectedEndpoint: {
 					type: Object
 				},
-				challengeDuration: Number,
-				challengeToSave: {
+				challengeTemplateDuration: Number,
+				challengeTemplateToSave: {
 					type: Object,
 					value: {}
 				}
@@ -82,7 +82,7 @@
 				this.$.endpointService.getEndpoints();
 				this.$.dialog.toggle();
 			},
-			saveChallenge: function () {
+			_saveChallengeTemplate: function () {
 				if (!this.$.form.validate()){
 					return;
 				}
@@ -90,22 +90,22 @@
 				for (var i = 0; i < this.selectedTasks.length; i++) {
 					taskIds.push(this.selectedTasks[i].id);
 				}
-				this.challengeToSave.tasks = taskIds;
-				this.challengeToSave.duration = 60 * this.challengeDuration;
-				this.challengeToSave.endpoint = this.selectedEndpoint.value;
-				this.$.challengeService.save(this.challengeToSave);
-				this.fire('challenge-created');
+				this.challengeTemplateToSave.tasks = taskIds;
+				this.challengeTemplateToSave.duration = 60 * this.challengeTemplateDuration;
+				this.challengeTemplateToSave.endpoint = this.selectedEndpoint.value;
+				this.$.challengeTemplateService.save(this.challengeTemplateToSave);
+				this.fire('challenge-template-created');
 				this.$.dialog.close();
 			},
 			_clearChallenge: function(){
-				this.challengeToSave = {};
+				this.challengeTemplateToSave = {};
 			},
 			_computeDefaultDuration: function () {
 				var duration = 0;
 				for (var i = 0; i < this.selectedTasks.length; i++) {
 					duration += this.selectedTasks[i].duration;
 				}
-				this.challengeDuration = duration / 60;
+				this.challengeTemplateDuration = duration / 60;
 			},
 			_computeIndex: function (index) {
 				return index + 1;
