--- a/app/elements/company/challenge/challenge-template-detail.html
+++ b/app/elements/company/challenge/challenge-template-detail.html
@@ -1,5 +1,5 @@
 <link rel="import" href="/elements/company/candidate/invite/invite-candidates.html">
-<link rel="import" href="/elements/common/services/challenge-service.html">
+<link rel="import" href="/elements/common/services/challenge-template-service.html">
 <link rel="import" href="/elements/common/services/task-service.html">
 <link rel="import" href="/elements/common/skill/skill-polygon.html">
 <link rel="import" href="/elements/company/task/task-card.html">
@@ -7,7 +7,7 @@
 
 <link rel="import" href="/bower_components/paper-material/paper-material.html">
 
-<dom-module id="challenge-detail">
+<dom-module id="challenge-template-detail">
 	<style>
 		#inviteCandidates {
 			cursor: pointer;
@@ -37,21 +37,21 @@
 		}
 	</style>
 	<template>
-		<challenge-service id="challengeService" challenge="{{challenge}}"></challenge-service>
+		<challenge-template-service id="challengeTemplateService" challenge-template="{{challengeTemplate}}"></challenge-template-service>
 		<task-service id="taskService" task="{{task}}"></task-service>
 
-		<invite-candidates id="inviteCandidatesModal" challenges="{{challengeAsList}}"></invite-candidates>
+		<invite-candidates id="inviteCandidatesModal" challenges="{{challengeTemplateAsList}}"></invite-candidates>
 		<div class="grid vertical layout mainContent">
 			<div class="horizontal layout">
 				<paper-material class="card grid-element" elevation="1">
-					<h1>{{challenge.name}}</h1>
+					<h1>{{challengeTemplate.name}}</h1>
 					<dl class="dl-horizontal">
 						<dt>Duration</dt>
 						<dd>{{duration}}</dd>
 						<dt>Description</dt>
-						<dd>{{challenge.description}}</dd>
+						<dd>{{challengeTemplate.description}}</dd>
 						<dt>Instructions</dt>
-						<dd>{{challenge.instructions}}</dd>
+						<dd>{{challengeTemplate.instructions}}</dd>
 					</dl>
 				</paper-material>
 				<!--TODO: skills?-->
@@ -80,7 +80,7 @@
 				</table>
 			</paper-material>
 			<div class="grid-row horizontal layout wrap">
-				<template is="dom-repeat" items="{{challenge.tasks}}">
+				<template is="dom-repeat" items="{{challengeTemplate.tasks}}">
 					<task-card task="{{item}}" no-select></task-card>
 				</template>
 			</div>
@@ -88,12 +88,11 @@
 	</template>
 	<script>
 		Polymer({
-			is: 'challenge-detail',
+			is: 'challenge-template-detail',
 			properties: {
-				challenge: {
+				challengeTemplate: {
 					type: Object,
-					notify: true,
-					observer: '_challengeChanged'
+					notify: true
 				},
 				mockedSkills: {
 					type: Object,
@@ -110,7 +109,7 @@
 					notify: true,
 					observer: '_taskChanged'
 				},
-				challengeKey: {
+				challengeTemplateIdy: {
 					type: String
 				},
 				coders: {
@@ -120,26 +119,26 @@
 				},
 				duration: {
 					type: String,
-					computed: 'computeDuration(challenge)'
+					computed: 'computeDuration(challengeTemplate)'
 				},
-				challengeAsList: {
+				challengeTemplateAsList: {
 					type: Array,
 					notify: true,
-					computed: '_challengeAsList(challenge)'
+					computed: '_challengeTemplateAsList(challengeTemplate)'
 				}
 			},
 			_taskChanged: function(){
 				this.push('tasks', this.task);
 			},
-			loadData: function (challengeKey) {
-				if (this.challengeKey === challengeKey) {
+			loadData: function (challengeTemplateId) {
+				if (this.challengeTemplateId === challengeTemplateId) {
 					return;
 				}
-				this.challengeKey = challengeKey;
-				this.$.challengeService.getById(challengeKey);
+				this.challengeTemplateId = challengeTemplateId;
+				this.$.challengeTemplateService.getById(challengeTemplateId);
 			},
-			computeDuration: function (challenge) {
-				return util.computeDuration(challenge.duration);
+			computeDuration: function (challengeTemplate) {
+				return util.computeDuration(challengeTemplate.duration);
 			},
 			computeIndex: function (index) {
 				return index + 1;
@@ -147,8 +146,8 @@
 			_inviteCandidates: function () {
 				this.$.inviteCandidatesModal.toggle();
 			},
-			_challengeAsList: function (challenge) {
-				return [challenge];
+			_challengeTemplateAsList: function (challengeTemplate) {
+				return [challengeTemplate];
 			}
 		});
 	</script>
