Add page to create challenge  * rename remaining files to new correct names  * add date-time-picker  * create page and service for challenge creation

--- a/app/elements/app-element.html
+++ b/app/elements/app-element.html
@@ -70,6 +70,10 @@
 						<challenge-page challenge-id="{{challenge}}"></challenge-page>
 					</section>
 
+					<section data-route="challenge-create" class="fullHeight">
+						<challenge-create id="challengeCreate"></challenge-create>
+					</section>
+
 					<section data-route="tasks">
 						<task-list id="taskList"></task-list>
 					</section>
