--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -31,6 +31,13 @@ window.addEventListener('WebComponentsReady', function() {
 		Polymer.Base.importHref('/elements/coder/challenge/page/challenge-page.html');
 	});
 
+	page('/challenge/template/:templateId/create', function(data) {
+		app.route = 'challenge-create';
+		Polymer.Base.importHref('/elements/company/challenge/challenge-create.html', function(){
+			app.$.challengeCreate.challengeTemplate = data.params.templateId;
+		});
+	});
+
 	page('/challenge/create', function() {
 		app.route = 'tasks';
 		Polymer.Base.importHref('/elements/company/task/task-list.html', function(){
@@ -41,7 +48,7 @@ window.addEventListener('WebComponentsReady', function() {
 
 	page('/challenges', function () {
 		app.route = 'challenges';
-		Polymer.Base.importHref('/elements/company/challenge/challenge-template-list.html', function(){
+		Polymer.Base.importHref('/elements/company/challenge/template/challenge-template-list.html', function(){
 			app.$.challengeList.getChallenges();
 		});
 	});
@@ -49,7 +56,7 @@ window.addEventListener('WebComponentsReady', function() {
 	page('/challenges/:challengeKey', function(data){
 		checkIsOrganization();
 		app.route = 'challenge-detail';
-		Polymer.Base.importHref('/elements/company/challenge/challenge-template-detail.html', function(){
+		Polymer.Base.importHref('/elements/company/challenge/template/challenge-template-detail.html', function(){
 			app.$.challengeTemplateDetail.loadData(data.params.challengeKey);
 		});
 	});
